# Chinchilla

./: .gitignore  CMakeLists.txt  LICENSE  Package.swift  README.md
Sources/CRime/: module.modulemap
Sources/Chinchilla/: controller.swift  rime.swift  server.swift
assets/: AppIcon.icns  background.drawio  config.py
assets/en.lproj/: InfoPlist.strings
assets/zh-Hans.lproj/: InfoPlist.strings
cmake/: MacOSXBundleInfo.plist.in
